# go2012

./: .gitignore  README.md
groundtruth/visionAdapter/: CMakeLists.txt  GenerateBica.cmake  GenerateIce.cmake  GenerateProtobuf.cmake  Makefile
groundtruth/visionAdapter/src/: Adapter.cpp  Adapter.h  UpdateLocalizationTimerTask.cpp  UpdateLocalizationTimerTask.h  VisionAdapter.ice  VisionAdapterI.cpp  VisionAdapterI.h
player/: CMakeLists.txt
player/cmake/: GenerateBica.cmake
player/conf/: comms.cfg  gt.cfg  wm.cfg
player/conf/ballPerception/: colorHSV.conf  colorHSV.conf.GermanOpen09  colorHSV.conf.simul  colorHSVlower.conf.MO2010  colorHSVlower.conf.graz  colorHSVlower.conf.lab  colorHSVlower.conf.real  colorHSVlower.conf.webots  colorHSVupper.conf  colorHSVupper.conf.graz  colorHSVupper.conf.real  recognize.conf
player/conf/geneticLocalization/: distancesLines.txt
player/conf/kinematics/: AlgarroboCameraLower.conf  AlgarroboCameraUpper.conf  CurroCameraLower.conf  CurroCameraUpper.conf  EstudianteCameraLower.conf  FraileCameraLower.conf  GitanoCameraLower.conf  WebotsCameraUpper.conf  cameraLower.conf  cameraUpper.conf
player/lib/: libmpfr.so.1
player/movs/: README.MOVS  brazos1.mov  brazos2.mov  brazos3.mov  cabezabrazo.mov  catch.mov  catch2.mov  circulos.mov  diagleft.mov  diagright.mov  flamenco.mov  frontleft2.mov  frontright2.mov  getUpBack.mov  getUpFront.mov  introduccion.mov  leftFoot.mov  leftFoot2.mov  movs.index  muevebrazos.mov  no.mov  rightFoot.mov  rightFoot2.mov  sentarse.mov  si.mov  strongfrontleft.mov  strongfrontright.mov  toleft.mov  toright.mov  yoga.mov
player/src/: Player.cpp  config.h
player/src/Components/: ApproachBall.cpp  ApproachBall.h  ApproachBall.xml  AuxPenalty.cpp  AuxPenalty.h  AuxPenalty.xml  AuxRole.cpp  AuxRole.h  AuxRole.xml  Body.cpp  Body.h  Body.xml  BodyDetector.cpp  BodyDetector.h  Component.cpp  Component.h  Debug.cpp  Debug.h  Defender.cpp  Defender.h  Defender.xml  Fallen.cpp  Fallen.h  FixMove.cpp  FixMove.h  FollowBall.cpp  FollowBall.h  FollowBall.xml  FootContact.cpp  FootContact.h  FootContact.xml  GameArbitrator.cpp  GameArbitrator.h  GameArbitrator.xml  Go2gpos.cpp  Go2gpos.h  Go2gpos.xml  Go2gposObs.cpp  Go2gposObs.h  Go2pos.cpp  (+71 more)
player/src/Components/Attention/: AbstractAttention.cpp  AbstractAttention.h  Attention.cpp  Attention.h  AttentionP.cpp  AttentionP.h  AttentionQ.cpp  AttentionQ.h  AttentionRR.cpp  AttentionRR.h
player/src/Components/AttentionClient/: AttentionClient.cpp  AttentionClient.h  BallAttentionClient.cpp  BallAttentionClient.h  GoalAttentionClient.cpp  GoalAttentionClient.h  StrategyAttentionClient.cpp  StrategyAttentionClient.h  StrategyAttentionClientBallP.cpp  StrategyAttentionClientBallP.h  StrategyAttentionClientBallQ.cpp  StrategyAttentionClientBallQ.h  StrategyAttentionClientBallRR.cpp  StrategyAttentionClientBallRR.h  StrategyAttentionClientGoalP.cpp  StrategyAttentionClientGoalP.h  StrategyAttentionClientGoalQ.cpp  StrategyAttentionClientGoalQ.h  StrategyAttentionClientGoalRR.cpp  StrategyAttentionClientGoalRR.h  StrategyAttentionClientW3D.cpp  StrategyAttentionClientW3D.h  W3DAttentionClient.cpp  W3DAttentionClient.h
player/src/Components/Localization/: AbstractLocalization.cpp  AbstractLocalization.h  EKFLocalization.cpp  EKFLocalization.h  GTLocalization.cpp  GTLocalization.h  GeneticLocalization.cpp  GeneticLocalization.h  Localization.cpp  Localization.h  MontecarloLocalization.cpp  MontecarloLocalization.h  NEKFLocalization.cpp  NEKFLocalization.h  SRL.cpp  SRL.h
player/src/Components/NaoServer/: NaoServerCamera.cpp
player/src/Components/demencia/: AleatoryMoveComponent.cpp  AleatoryMoveComponent.h
player/src/Modules/: Coach.cpp  Coach.h
player/src/interfaces/: CMakeLists.txt
player/src/lib/: AttentionClient.cpp  Calibration.cpp  Calibration.h  Dictionary.cpp  Dictionary.h  GameController.cpp  GameController.h  Leds.cpp  Leds.h  Register.cpp  Register.h  Speech.cpp  Speech.h  WorldModel.cpp  WorldModel.h
player/src/lib/Body/: BezierMoveParser.cpp  BezierMoveParser.h  BodyCache.cpp  BodyCache.h  BodyMovesParser.cpp  BodyMovesParser.h  BodyMovesParserFactory.cpp  BodyMovesParserFactory.h  FixMovesParser.cpp  FixMovesParser.h  MovesSupplier.cpp  MovesSupplier.h  OldMovesParser.cpp  OldMovesParser.h  RegexHelper.cpp  RegexHelper.h
player/src/lib/Localization/: LocalizationHealth.cpp  LocalizationHealth.h  MovementModel.cpp  MovementModel.h  ObservationModel.cpp  ObservationModel.h
player/src/lib/Math/: GaussianDistribution2D.cpp  GaussianDistribution2D.h  Geometry.cpp  Geometry.h  Matrix2x2.h  Pose2D.h  Vector2.h  Vector2D_BH.h
player/src/lib/Net/: NetServer.h  TcpServer.cpp  TcpServer.h  UdpClient.cpp  UdpClient.h  UdpServer.cpp  UdpServer.h
player/src/lib/Sched/: CascadeScheduler.cpp  CascadeScheduler.h  SchedulerBase.h
player/src/lib/estimation/: GoalsModel.cpp  GoalsModel.h  JPDAF.cpp  JPDAF.h  ObjectState.h  RobotModel.cpp  RobotModel.h  RobotPose.h  SingleObjectModel.cpp  SingleObjectModel.h
player/src/lib/log/: ComponentSnapshot.cpp  ComponentSnapshot.h  SnapshotData.cpp  SnapshotData.h  SnapshotHeader.cpp  SnapshotHeader.h  SnapshotMessages.cpp  SnapshotMessages.h
player/src/lib/vision/: ImageHandler.cpp  ImageHandler.h  Lut.cpp  Lut.h
player/src/motions/: StandUp.cpp  StandUpBack.txt  StandUpFront.txt  backwardKickLeft.cpp  backwardKickRight.cpp  fisioBrazosAlternosArribaAbajo.cpp  fisioBrazosCruzAbrirCerrar.cpp  fisioBrazosParalelosArribaAbajo.cpp  fisioBrazosTocarHombro.cpp  fisioCabezaArribaAbajo.cpp  fisioCabezaIzquierdaDerecha.cpp  fisioMunecaPalmaVuelta.cpp  forwardDribble.cpp  forwardKick.cpp  forwardKickLeft.txt  forwardKickRight.txt  forwardStrong.cpp  obliqueKick.cpp  sideKickMiniIn.cpp  sideKickOut.cpp  sideKickStrongIn.cpp  suicide.cpp
player/test/: TCPcommtester  TCPcommtester.cpp  UDPcommtester  UDPcommtester.cpp  commtester  test_activate.py  test_ballperception.py  test_deactivate.py  test_followball.py  test_gostraight.py  test_head.py  test_kick.py  test_pause.py  test_run.py  test_run_robot.py  test_turn.py
(+309 files in other folders)
